--- a/-员额/学习/2017-07-27-3D旋转矩阵与变换矩阵.md
+++ b/-员额/学习/2017-07-27-3D旋转矩阵与变换矩阵.md
@@ -3,9 +3,8 @@ layout: post
 title: 3D旋转矩阵与变换矩阵
 date: 2017-7-27
 description: 3D rotational matrix and transformation matrix
-categories: [Working]
-tags: [math]
-mathjax:    true
+categories: 学习
+
 ---
 
 
