Update and rename _posts/学习/2018-09-13-四旋翼无人机建模与仿真.md to -员额/学习/2018-09-13-四旋翼无人机建模与仿真.md

--- a/-员额/学习/2018-09-13-四旋翼无人机建模与仿真.md
+++ b/-员额/学习/2018-09-13-四旋翼无人机建模与仿真.md
@@ -3,9 +3,8 @@ layout: post
 title: "四旋翼无人机建模与仿真(Mathematica/Matlab)"
 date: 2018-9-15
 description: ""
-categories: [Working]
-tags: [Quadrotor]
-mathjax:    true
+categories: 学习
+
 ---
 
 
