--- a/_posts/学习/2018-09-13-四旋翼无人机建模与仿真.md
+++ b/_posts/学习/2018-09-13-四旋翼无人机建模与仿真.md
@@ -14,7 +14,7 @@ categories: 学习
 四旋翼无人机的受力模型如下图所示，
 
 <p align="center">
-	<img src="..\media\image\Quad_FM.png" width="400">
+	<img src="..\images\2018-09-15-matlab\Quad_FM.png" width="400">
     <br>
     <em>Fig. 1: 四旋翼无人机示意图</em>
 </p>
