--- a/_posts/学习/2019-7-10-无人机吊挂综述.md
+++ b/_posts/学习/2019-7-10-无人机吊挂综述.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 无人机吊挂综述
-category: 生活
+category: 学习
 ---
 
 当今，无人机以自身独特的优势获得了极大的发展，在军用、警用、国土安全，灾害预警，线路巡检和影视航拍，通讯，农业，环境保护等诸多领域有着广范应用。特别是在当下人工智能的时代浪潮中，其研究成果也是日新月异，物流运输已成为无人机重要的应用方向之一。无人机作为一个理想的作业平台，吊挂飞行是其遂行任务之一。它具有灵活的机动性，可以在其它运输工具难以到达的地方，快速、高效地开展物资运输投放作业；而且无需考虑地理环境，不受陆地交通运输的管制，操作简单易上手；再者，采用吊挂形式的运输不用担心吊挂物外形的影响。因次，吊挂无人机在军事和民用领域得到了越来越广泛的应用。然而无人机在吊挂物体飞行时，其系统稳定性会受到来自吊挂物体摆动的影响，这也是国内外高校和研究团队关注和研究的焦点。
