--- a/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
+++ b/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
@@ -31,14 +31,29 @@ $$
 0&0&1
 \end{array}} \right]
 $$
-$$[\begin{multline}
-T = \begin{bmatrix}
-c_\psi &amp; s_\psi &amp; 0 \\
--s_\psi &amp; c_\psi &amp; 0 \\
-0 &amp; 0 &amp; 1
-\end{bmatrix}
-\begin{bmatrix}]
-$$
+\begin{multline}
+                    T = \begin{bmatrix}
+                    c_\psi &amp; s_\psi &amp; 0 \\
+                    -s_\psi &amp; c_\psi &amp; 0 \\
+                    0 &amp; 0 &amp; 1
+                    \end{bmatrix}
+                    \begin{bmatrix}
+                    1 &amp; 0 &amp; 0 \\
+                    0 &amp; c_\theta &amp; s_\theta \\
+                    0 &amp; -s_\theta &amp; c_\theta
+                    \end{bmatrix}
+                    \begin{bmatrix}
+                    c_\phi &amp; s_\phi &amp; 0 \\
+                    -s_\phi &amp; c_\phi &amp; 0 \\
+                    0 &amp; 0 &amp; 1
+                    \end{bmatrix}
+                    =
+                    \begin{bmatrix}
+                    c_\psi c_\phi - s_\psi c_\theta s_\phi &amp; c_\psi s_\phi + s_\psi c_\theta c_\phi &amp; s_\psi s_\theta \\
+                    -s_\psi c_\phi - c_\psi c_\theta s_\phi &amp; -s_\psi s_\phi + c_\psi c_\theta c_\phi &amp; c_\psi s_\theta \\
+                    s_\theta s_\phi &amp; -s_\theta c_\phi &amp; c_\theta
+                    \end{bmatrix} \tag{1}
+                    \end{multline}
                   
 计算得到，
 $$
