--- a/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
+++ b/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
@@ -31,6 +31,16 @@ $$
 0&0&1
 \end{array}} \right]
 $$
+
+                  
+计算得到，
+$$
+\bf{C}^b_n=\left[ {\begin{array}{*{20}{c}}
+{\cos \left( \theta  \right)\cos \left( \psi  \right)}&{\cos \left( \theta  \right)\sin \left( \psi  \right)}&{ - \sin \left( \theta  \right)}\\
+{\sin \left( \phi  \right)\sin \left( \theta  \right)\cos \left( \psi  \right) - \cos \left( \phi  \right)\sin \left( \psi  \right)}&{\sin \left( \phi  \right)\sin \left( \theta  \right)\sin \left( \psi  \right) + \cos \left( \phi  \right)\cos \left( \psi  \right)}&{\sin \left( \phi  \right)\cos \left( \theta  \right)}\\
+{\cos \left( \phi  \right)\sin \left( \theta  \right)\cos \left( \psi  \right) + \sin \left( \phi  \right)\sin \left( \psi  \right)}&{\cos \left( \phi  \right)\sin \left( \theta  \right)\sin \left( \psi  \right) - \sin \left( \phi  \right)\cos \left( \psi  \right)}&{\cos \left( \phi  \right)\cos \left( \theta  \right)}
+\end{array}} \right]
+$$
 \begin{multline}
                     T = \begin{bmatrix}
                     c_\psi &amp; s_\psi &amp; 0 \\
@@ -54,16 +64,38 @@ $$
                     s_\theta s_\phi &amp; -s_\theta c_\phi &amp; c_\theta
                     \end{bmatrix} \tag{1}
                     \end{multline}
-                  
-计算得到，
-$$
-\bf{C}^b_n=\left[ {\begin{array}{*{20}{c}}
-{\cos \left( \theta  \right)\cos \left( \psi  \right)}&{\cos \left( \theta  \right)\sin \left( \psi  \right)}&{ - \sin \left( \theta  \right)}\\
-{\sin \left( \phi  \right)\sin \left( \theta  \right)\cos \left( \psi  \right) - \cos \left( \phi  \right)\sin \left( \psi  \right)}&{\sin \left( \phi  \right)\sin \left( \theta  \right)\sin \left( \psi  \right) + \cos \left( \phi  \right)\cos \left( \psi  \right)}&{\sin \left( \phi  \right)\cos \left( \theta  \right)}\\
-{\cos \left( \phi  \right)\sin \left( \theta  \right)\cos \left( \psi  \right) + \sin \left( \phi  \right)\sin \left( \psi  \right)}&{\cos \left( \phi  \right)\sin \left( \theta  \right)\sin \left( \psi  \right) - \sin \left( \phi  \right)\cos \left( \psi  \right)}&{\cos \left( \phi  \right)\cos \left( \theta  \right)}
-\end{array}} \right]
-$$
+\begin{equation}
+                    \omega
+                    =
+                    \begin{bmatrix}
+                    \omega_x \\ \omega_y \\ \omega_z
+                    \end{bmatrix}
+                    =
+                    \begin{bmatrix}
+                    s_\psi s_\theta \dot \phi + c_\psi \dot \theta \\
+                    c_\psi s_\theta \dot \phi - s_\psi \dot \theta \\
+                    c_\theta \dot \phi + \dot \psi
+                    \end{bmatrix} \tag{2}
+                    \end{equation}
+                    <h1>The Lagrangian Equations of Motion</h1>
+                    The Lagrangian Equations of Motion are derived from the following equation:
+                    \begin{equation}
+                    \frac{d}{dt}\left(\frac{\partial L}{\partial \dot q_i}\right)
+                    -
+                    \frac{\partial L}{\partial q_i}
+                    =
+                    \Phi_{q_i} \tag{3}
+                    \end{equation}
+                    <h2>Total System Energy</h2>
+                    In the above equation, $L$ denotes the difference between the kinetic ($T$) and potential ($U$) energy within the system. Therefore, $L$ can be expressed as:
+                    \begin{equation}
+                    L = T - U
+                    \end{equation}
 
+                    Further, $T$, as a combination of translational kinetic energy and rotational kinetic energy, can be expressed as:
+                    \begin{equation}
+                    T = T_{translational} + T_{rotational}
+                    \end{equation}
 
 
 
