--- a/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
+++ b/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
@@ -43,8 +43,8 @@ $$
 $$
 \begin{multline}
                     T = \begin{bmatrix}
-                    c_\psi &amp; s_\psi &amp; 0 \\
-                    -s_\psi &amp; c_\psi &amp; 0 \\
+                    c_\psi &amp; s_\psi &amp; 0\\
+                    -s_\psi &amp; c_\psi &amp; 0\\
                     0 &amp; 0 &amp; 1
                     \end{bmatrix}
                     \begin{bmatrix}
@@ -68,7 +68,9 @@ $$
                     \omega
                     =
                     \begin{bmatrix}
-                    \omega_x \\ \omega_y \\ \omega_z
+                    \omega_x \\ 
+					\omega_y \\ 
+					\omega_z
                     \end{bmatrix}
                     =
                     \begin{bmatrix}
@@ -77,7 +79,8 @@ $$
                     c_\theta \dot \phi + \dot \psi
                     \end{bmatrix} \tag{2}
                     \end{equation}
-                    <h1>The Lagrangian Equations of Motion</h1>
+                  
+				  
                     The Lagrangian Equations of Motion are derived from the following equation:
                     \begin{equation}
                     \frac{d}{dt}\left(\frac{\partial L}{\partial \dot q_i}\right)
@@ -86,7 +89,7 @@ $$
                     =
                     \Phi_{q_i} \tag{3}
                     \end{equation}
-                    <h2>Total System Energy</h2>
+                    <p>Total System Energy<p>
                     In the above equation, $L$ denotes the difference between the kinetic ($T$) and potential ($U$) energy within the system. Therefore, $L$ can be expressed as:
                     \begin{equation}
                     L = T - U
