--- a/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
+++ b/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
@@ -41,36 +41,36 @@ $$
 {\cos \left( \phi  \right)\sin \left( \theta  \right)\cos \left( \psi  \right) + \sin \left( \phi  \right)\sin \left( \psi  \right)}&{\cos \left( \phi  \right)\sin \left( \theta  \right)\sin \left( \psi  \right) - \sin \left( \phi  \right)\cos \left( \psi  \right)}&{\cos \left( \phi  \right)\cos \left( \theta  \right)}
 \end{array}} \right]
 $$
-\begin{multline}
+ \begin{multline}
                     T = \begin{bmatrix}
-                    c_\psi  ; s_\psi  ; 0\\
-                    -s_\psi  ; c_\psi  ; 0\\
-                    0  ; 0  ; 1
+                    c_\psi & ; s_\psi & ; 0 \\
+                    -s_\psi & ; c_\psi & ; 0 \\
+                    0 & ; 0 & ; 1
                     \end{bmatrix}
                     \begin{bmatrix}
-                    1  ; 0  ; 0 \\
-                    0  ; c_\theta  ; s_\theta \\
-                    0  ; -s_\theta  ; c_\theta
+                    1 & ; 0 & ; 0 \\
+                    0 & ; c_\theta & ; s_\theta \\
+                    0 & ; -s_\theta & ; c_\theta
                     \end{bmatrix}
                     \begin{bmatrix}
-                    c_\phi  ; s_\phi  ; 0 \\
-                    -s_\phi  ; c_\phi  ; 0 \\
-                    0  ; 0  ; 1
+                    c_\phi & ; s_\phi & ; 0 \\
+                    -s_\phi & ; c_\phi & ; 0 \\
+                    0 & ; 0 & ; 1
                     \end{bmatrix}
                     =
                     \begin{bmatrix}
-                    c_\psi c_\phi - s_\psi c_\theta s_\phi  ; c_\psi s_\phi + s_\psi c_\theta c_\phi  ; s_\psi s_\theta \\
-                    -s_\psi c_\phi - c_\psi c_\theta s_\phi  ; -s_\psi s_\phi + c_\psi c_\theta c_\phi  ; c_\psi s_\theta \\
-                    s_\theta s_\phi  ; -s_\theta c_\phi  ; c_\theta
+                    c_\psi c_\phi - s_\psi c_\theta s_\phi & ; c_\psi s_\phi + s_\psi c_\theta c_\phi & ; s_\psi s_\theta \\
+                    -s_\psi c_\phi - c_\psi c_\theta s_\phi & ; -s_\psi s_\phi + c_\psi c_\theta c_\phi & ; c_\psi s_\theta \\
+                    s_\theta s_\phi & ; -s_\theta c_\phi & ; c_\theta
                     \end{bmatrix} \tag{1}
                     \end{multline}
-\begin{equation}
+                 The relation between Euler Angle parameters and the angular velocity vector are as follows.
+
+                    \begin{equation}
                     \omega
                     =
                     \begin{bmatrix}
-                    \omega_x \\ 
-					\omega_y \\ 
-					\omega_z
+                    \omega_x \\ \omega_y \\ \omega_z
                     \end{bmatrix}
                     =
                     \begin{bmatrix}
@@ -78,26 +78,6 @@ $$
                     c_\psi s_\theta \dot \phi - s_\psi \dot \theta \\
                     c_\theta \dot \phi + \dot \psi
                     \end{bmatrix} \tag{2}
-                    \end{equation}
-                  
-				  
-                    The Lagrangian Equations of Motion are derived from the following equation:
-                    \begin{equation}
-                    \frac{d}{dt}\left(\frac{\partial L}{\partial \dot q_i}\right)
-                    -
-                    \frac{\partial L}{\partial q_i}
-                    =
-                    \Phi_{q_i} \tag{3}
-                    \end{equation}
-                    <p>Total System Energy<p>
-                    In the above equation, $L$ denotes the difference between the kinetic ($T$) and potential ($U$) energy within the system. Therefore, $L$ can be expressed as:
-                    \begin{equation}
-                    L = T - U
-                    \end{equation}
-
-                    Further, $T$, as a combination of translational kinetic energy and rotational kinetic energy, can be expressed as:
-                    \begin{equation}
-                    T = T_{translational} + T_{rotational}
                     \end{equation}
 
 
