--- a/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
+++ b/_posts/测试/2017-07-27-3D旋转矩阵与变换矩阵.md
@@ -43,6 +43,30 @@ $$
 $$
  \begin{multline}
                     T = \begin{bmatrix}
+                    c_\psi & s_\psi & 0 \\
+                    -s_\psi & c_\psi & 0 \\
+                    0 & 0 & 1
+                    \end{bmatrix}
+                    \begin{bmatrix}
+                    1 & 0 & 0 \\
+                    0 & c_\theta & s_\theta \\
+                    0 & -s_\theta & c_\theta
+                    \end{bmatrix}
+                    \begin{bmatrix}
+                    c_\phi & s_\phi & 0 \\
+                    -s_\phi & c_\phi & 0 \\
+                    0 & 0 & 1
+                    \end{bmatrix}
+                    =
+                    \begin{bmatrix}
+                    c_\psi c_\phi - s_\psi c_\theta s_\phi & c_\psi s_\phi + s_\psi c_\theta c_\phi & s_\psi s_\theta \\
+                    -s_\psi c_\phi - c_\psi c_\theta s_\phi & -s_\psi s_\phi + c_\psi c_\theta c_\phi & c_\psi s_\theta \\
+                    s_\theta s_\phi & -s_\theta c_\phi & c_\theta
+                    \end{bmatrix} \tag{1}
+                    \end{multline}
+					
+ \begin{multline}
+                    T = \begin{bmatrix}
                     c_\psi & ; s_\psi & ; 0 \\
                     -s_\psi & ; c_\psi & ; 0 \\
                     0 & ; 0 & ; 1
