--- a/_posts/学习/2019-7-12-拉格朗日.md
+++ b/_posts/学习/2019-7-12-拉格朗日.md
@@ -14,7 +14,6 @@ categories: 学习
 利用这个表达式，通过拉格朗日方法导出了刚体各状态变量的运动方程。
 
 - 欧拉旋转方程
-
 					$$
 					\begin{multline}
                     T = \begin{bmatrix}
@@ -42,7 +41,6 @@ categories: 学习
 					$$
 					
 - 欧拉角参数与角速度矢量之间的关系如下
-
                     $$
 					\begin{equation}
                     \omega
@@ -62,7 +60,6 @@ categories: 学习
 - 拉格朗日运动方程
 
 拉格朗日运动方程是由下列方程导出的：
-
                     $$
 					\begin{equation}
                     \frac{d}{dt}\left(\frac{\partial L}{\partial \dot q_i}\right)
@@ -76,7 +73,6 @@ categories: 学习
 - 总系统能量
 
 在上面的方程中，$L$表示动力学之间的差异($T$)和潜力($U$)系统内的能量。因此，$L$可表示为：
-
                     $$
 					\begin{equation}
                     L = T - U
@@ -89,15 +85,17 @@ categories: 学习
                     \end{equation}
 					$$
 					
-让我们来定义$\overline{x}=x E_x + y E_y + z E_z$作为四翼飞机的质量中心，如下所示。	quad-attitude因为
-$v = \dot{\overline x}
+让我们来定义$\overline{x}=x E_x + y E_y + z E_z$作为四翼飞机的质量中心，如下所示。	
+ 
+ <img src="/images/2019-7-12-quad-attitude/quad-attitude.png" alt="quad-attitude" width="280" height="300" />
+ 
+quad-attitude因为$v = \dot{\overline x}
                     =
                     \begin{bmatrix}
                     \dot x \\
                     \dot y \\
                     \dot z \\
                     \end{bmatrix}$	，我们有	
-					
                     $$
 					\begin{equation}
                     T_{translational} = \frac{1}{2}mv \cdot v = \frac{1}{2} m \left(\dot x^2 + \dot y^2 + \dot z^2\right)
@@ -114,8 +112,7 @@ $v = \dot{\overline x}
                     =
                     \begin{bmatrix}
                     \omega_x \\ \omega_y \\ \omega_z
-                    \end{bmatrix}$，我们有
-					
+                    \end{bmatrix}$，我们有				
 					$$
 					\begin{equation}
                     T_{rotational}
@@ -127,7 +124,6 @@ $v = \dot{\overline x}
 					$$
 					
 因此，总动能可以表示为
-
                     $$
 					\begin{equation}
                     T
@@ -139,7 +135,6 @@ $v = \dot{\overline x}
 					$$
 					
 由于势能，$U$，看作是$mgz$,所以表达式$L$可表示为：
-
                     $$
 					\begin{equation}
                     L
@@ -153,7 +148,6 @@ $v = \dot{\overline x}
 					$$
 					
 将方程$(2)$带入方程$(4)$中，我们得到最后的表达式$L$：
-
                     $$
 					\begin{multline}
                     L
