--- a/_posts/学习/2019-7-12-拉格朗日.md
+++ b/_posts/学习/2019-7-12-拉格朗日.md
@@ -7,7 +7,7 @@ categories: 学习
 
 ---
 
-#导言
+# 导言
 
 在这个项目中，我通过拉格朗日运动方程推导出和时间相关的四旋翼飞行器的动力学，同时通过欧拉角描述四旋翼飞行器的姿态。
 我首先展示了欧拉角，它们的导数，和四旋翼速度之间的关系。利用这些关系，我找到了平移和势能差的表达式。
@@ -15,7 +15,7 @@ categories: 学习
 
 - 欧拉旋转方程
 					
-					\$$
+					$$
 					\begin{multline}
                     T = \begin{bmatrix}
                     c_\psi & s_\psi & 0 \\
@@ -43,7 +43,7 @@ categories: 学习
 					
 - 欧拉角参数与角速度矢量之间的关系如下
                     
-					\$$
+					$$
 					\begin{equation}
                     \omega
                     =
@@ -75,12 +75,13 @@ categories: 学习
 - 总系统能量
 
 在上面的方程中，$L$表示动力学之间的差异($T$)和潜力($U$)系统内的能量。因此，$L$可表示为：
-                    \$$
+                    $$
 					\begin{equation}
                     L = T - U
                     \end{equation}
 					$$
-					此外，$T$，作为平移动能和转动动能的结合，可以表示为：
+
+此外，$T$，作为平移动能和转动动能的结合，可以表示为：
 					$$
 					\begin{equation}
                     T = T_{translational} + T_{rotational}
@@ -89,8 +90,7 @@ categories: 学习
 					
 让我们来定义$\overline{x}=x E_x + y E_y + z E_z$作为四翼飞机的质量中心，如下所示。	
  
- <img src="/images/2019-7-12-quad-attitude/quad-attitude.png" alt="quad-attitude" width="280" height="300" />
- 
+ ![](/images//2019-7-12-quad-attitude/quad-attitude.png) 
 quad-attitude因为$v = \dot{\overline x}
                     =
                     \begin{bmatrix}
@@ -126,7 +126,7 @@ quad-attitude因为$v = \dot{\overline x}
 					$$
 					
 因此，总动能可以表示为
-                    \$$
+                    $$
 					\begin{equation}
                     T
                     =
@@ -137,7 +137,7 @@ quad-attitude因为$v = \dot{\overline x}
 					$$
 					
 由于势能，$U$，看作是$mgz$,所以表达式$L$可表示为：
-                    \$$
+                    $$
 					\begin{equation}
                     L
                     =
@@ -150,7 +150,7 @@ quad-attitude因为$v = \dot{\overline x}
 					$$
 					
 将方程$(2)$带入方程$(4)$中，我们得到最后的表达式$L$：
-                    \$$
+                    $$
 					\begin{multline}
                     L
                     =
