--- a/_posts/学习/2019-7-12-拉格朗日.md
+++ b/_posts/学习/2019-7-12-拉格朗日.md
@@ -94,6 +94,7 @@ $$
 让我们来定义$\overline{x}=x E_x + y E_y + z E_z$作为四翼飞机的质量中心，如下所示。	
  
  ![](/images//2019-7-12-quad-attitude/quad-attitude.png) 
+ 
 quad-attitude因为$v = \dot{\overline x}
                     =
                     \begin{bmatrix}
@@ -108,16 +109,17 @@ $$
                     \end{equation}
 					$$		
 					
-此外，因为$J
-=
-\begin{bmatrix}
+此外，因为$J=\begin{bmatrix}
                     J_{xx} & 0 & 0 \\
                     0 & J_{yy} & 0 \\
                     0 & 0 & J_{zz}
-                    \end{bmatrix}$由于四边形的对称性，$\omega
+                    \end{bmatrix}$由于四边形的对称性，
+$\omega
                     =
                     \begin{bmatrix}
-                    \omega_x \\ \omega_y \\ \omega_z
+                    \omega_x \\ 
+					\omega_y \\ 
+					\omega_z
                     \end{bmatrix}$，我们有				
 
 $$
