--- a/_posts/学习/2019-7-12-拉格朗日.md
+++ b/_posts/学习/2019-7-12-拉格朗日.md
@@ -93,15 +93,13 @@ $$
 					
 让我们来定义$\overline{x}=x E_x + y E_y + z E_z$作为四翼飞机的质量中心，如下所示。	
  
- ![](/images//2019-7-12-quad-attitude/quad-attitude.png) 
  
-quad-attitude因为$v = \dot{\overline x}
-=
-\begin{bmatrix}
-\dot x \\
-\dot y \\
-\dot z \\
-\end{bmatrix}$	，我们有	
+ <p align="center">
+	<img src="../images//2019-7-12-quad-attitude/quad-attitude.png" width="400">
+    <br>
+    <em>Fig. 1: 四旋翼飞行姿态</em>
+</p>
+quad-attitude因为$v = \dot{\overline x}=\begin{bmatrix}\dot x \\dot y \\dot z \\\end{bmatrix}$，我们有	
 
 $$
 \begin{equation}
