--- a/_posts/学习/2019-7-12-拉格朗日.md
+++ b/_posts/学习/2019-7-12-拉格朗日.md
@@ -99,7 +99,7 @@ $$
     <br>
     <em>Fig. 1: 四旋翼飞行姿态</em>
 </p>
-quad-attitude因为$v = \dot{\overline x}=\begin{bmatrix}\dot x \\dot y \\dot z \\\end{bmatrix}$，我们有	
+quad-attitude因为$v = \dot{\overline x}=\begin{bmatrix}\dot x \\\dot y \\\dot z \\\end{bmatrix}$，我们有	
 
 $$
 \begin{equation}
@@ -115,9 +115,9 @@ J_{xx} & 0 & 0 \\
 $\omega
                     =
                     \begin{bmatrix}
-                    \omega_x \\ 
-					\omega_y \\ 
-					\omega_z
+                    omega_x \\ 
+					omega_y \\ 
+					omega_z
                     \end{bmatrix}$，我们有				
 
 $$
