--- a/_posts/学习/2019-7-12-拉格朗日.md
+++ b/_posts/学习/2019-7-12-拉格朗日.md
@@ -99,7 +99,12 @@ $$
     <br>
     <em>Fig. 1: 四旋翼飞行姿态</em>
 </p>
-quad-attitude因为$v = \dot{\overline x}=\begin{bmatrix}\dot x \\\dot y \\\dot z \\\end{bmatrix}$，我们有	
+quad-attitude因为$v = \dot{\overline x}=
+\begin{bmatrix}
+\dot x \\
+\dot y \\
+\dot z \\
+\end{bmatrix}$，我们有	
 
 $$
 \begin{equation}
@@ -108,16 +113,16 @@ $$
 					$$		
 					
 此外，因为$J=\begin{bmatrix}
-J_{xx} & 0 & 0 \\
-0 & J_{yy} & 0 \\
+J_{xx} & 0 & 0\\
+0 & J_{yy} & 0\\
 0 & 0 & J_{zz}
 \end{bmatrix}$由于四边形的对称性，
 $\omega
                     =
                     \begin{bmatrix}
-                    omega_x \\ 
-					omega_y \\ 
-					omega_z
+                    \omega_x \\ 
+					\omega_y \\ 
+					\omega_z
                     \end{bmatrix}$，我们有				
 
 $$
